# requirements-graphrag-api

./: .env.example  .gitignore  .markdownlint.jsonc  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_CODE_HANDOFF.md  Dockerfile  EVALUATION_HANDOFF.md  LICENSE  PLAN.md  README.md  RESTRUCTURE_PLAN.md  SPECIFICATION.md  chunk_embeddings_VECTOR_INDEX.json  docker-compose.yml  lighthouserc.js  pyproject.toml  railway.toml  test.cypher  test_query.py  vercel.json
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/commands/: implement.md  plan.md  review.md  test.md
.claude/hooks/: check-pr-closing-keyword.sh  format-python.sh  post-task-check.sh  session-init.sh  validate-bash.sh  validate-docs-placement.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  dependabot-auto-merge.yml  dependabot-review-routing.yml  deploy.yml  evaluation.yml  lighthouse.yml  prompt-sync-check.yml  sync-prompts.yml
api/: index.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  langgraph.json  pyproject.toml  requirements.txt  test_query.py
backend/scripts/: add_golden_example.py  check_prompt_sync.py  ci_evaluation.py  compare_experiments.py  compare_platforms.py  create_agentic_dataset.py  create_eval_datasets.py  create_golden_dataset.py  export_for_annotation.py  import_feedback.py  migrate_golden_datasets.py  online_eval_cypher.py  profile_baseline.py  push_prompts.py  quality_check.py  run_agentic_evaluation.py  run_evaluation.py  run_prompt_comparison.py  run_ragas_evaluation.py  run_vector_evaluation.py  sync_prompts_to_hub.py  test_api.sh  test_online_evaluators.py  update_datasets.py
backend/src/requirements_graphrag_api/: __init__.py  api.py  config.py  graph.py  neo4j_client.py  observability.py
backend/src/requirements_graphrag_api/auth/: __init__.py  api_key.py  audit.py  middleware.py  postgres_store.py  scopes.py
backend/src/requirements_graphrag_api/core/: __init__.py  context.py  conversation.py  definitions.py  embeddings.py  errors.py  generation.py  retrieval.py  routing.py  standards.py  text2cypher.py
backend/src/requirements_graphrag_api/core/agentic/: __init__.py  checkpoints.py  nodes.py  orchestrator.py  prompts.py  state.py  streaming.py  tools.py
backend/src/requirements_graphrag_api/core/agentic/subgraphs/: __init__.py  rag.py  research.py  synthesis.py
backend/src/requirements_graphrag_api/evaluation/: __init__.py  agentic_evaluators.py  constants.py  conversational_evaluators.py  cost_analysis.py  domain_metrics.py  golden_dataset.py  metrics.py  performance.py  ragas_evaluators.py  regression.py  structured_evaluators.py
backend/src/requirements_graphrag_api/guardrails/: __init__.py  conversation.py  events.py  hallucination.py  metrics.py  output_filter.py  pii_detection.py  prompt_injection.py  topic_guard.py  toxicity.py
backend/src/requirements_graphrag_api/middleware/: __init__.py  rate_limit.py  size_limit.py  timeout.py  tracing.py
backend/src/requirements_graphrag_api/prompts/: __init__.py  catalog.py  definitions.py  evaluation.py
backend/src/requirements_graphrag_api/routes/: __init__.py  admin.py  chat.py  definitions.py  feedback.py  handlers.py  health.py  schema.py  search.py  standards.py
backend/tests/: conftest.py  test_config.py  test_observability.py
backend/tests/benchmark/: __init__.py  generator.py  golden_dataset.py
backend/tests/test_auth/: __init__.py  test_api_key.py  test_audit.py  test_middleware.py  test_postgres_store.py  test_scopes.py
backend/tests/test_core/: test_context.py  test_conversation.py  test_cost_tracker_wiring.py  test_errors.py  test_generation.py  test_glossary.py  test_retrieval.py  test_routing.py  test_standards.py  test_text2cypher.py
backend/tests/test_core/test_agentic/: __init__.py  test_integration.py  test_orchestrator.py  test_streaming_safety.py  test_subgraphs.py
backend/tests/test_evaluation/: test_agentic_evaluators.py  test_cost_analysis.py  test_evaluate_pipeline.py  test_performance.py  test_ragas_evaluators.py
backend/tests/test_guardrails/: __init__.py  test_conversation.py  test_events.py  test_hallucination.py  test_metrics.py  test_output_filter.py  test_pii_detection.py  test_prompt_injection.py  test_rate_limiting.py  test_topic_guard.py  test_toxicity.py  test_tracing.py
backend/tests/test_middleware/: test_cors.py  test_size_limit.py  test_timeout.py
backend/tests/test_prompts/: test_evaluation.py
backend/tests/test_routes/: test_admin.py  test_chat.py  test_feedback.py  test_health.py  test_search.py
docs/: AGENTIC_IMPLEMENTATION_PLAN.md  AI_ENGINEERING_DESIGN_PRINCIPLES.md  DEV_WORKFLOW.md  FEEDBACK_WORKFLOW.md  FRONTEND_API_KEY_SESSION.md  GUARDRAILS_IMPLEMENTATION_PLAN.md  LANGSMITH_EVALUATION_GUIDE.md  PHASE_B_SCOPE.md  PLATFORM_COMPARISON.md  PRODUCTION_MONITORING.md  PROMPT_ITERATION_WORKFLOW.md  VERIFICATION_RUNBOOK.md
docs/guardrails/: IMPLEMENTATION_SUMMARY.md  PHASE1_CRITICAL_SECURITY.md  PHASE2_CONTENT_SAFETY.md  PHASE3_ACCESS_CONTROL.md  PHASE4_ADVANCED_FEATURES.md  POSTGRES_AUTH_SESSION.md  POSTGRES_AUTH_SETUP.md
docs/guides/: langsmith-getting-started.md  langsmith-ui-setup.md  langsmith-user-manual.md
docs/performance/: PHASE_A_ANALYSIS.md  PHASE_A_PERFORMANCE_ANALYSIS.md
docs/plans/: unified-implementation-plan.md
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
scripts/: ci_evaluation.py  compare_platforms.py  create_api_key.py  create_eval_datasets.py  export_for_annotation.py  generate_benchmark_dataset.py  import_feedback.py  push_prompts.py  run_prompt_comparison.py  test_api.sh  update_datasets.py  verify.sh
tests/: __init__.py  conftest.py  test_config.py  test_cost_metrics.py  test_feedback_loop.py  test_mlflow_tracking.py  test_neo4j_client.py  test_observability.py  test_observability_comparison.py  test_prompts.py  test_token_counter.py
(+129 files in other folders)
