[project]
name = "requirements-graphrag-api"
version = "0.1.0"
description = "GraphRAG REST API for Requirements Management Knowledge Graph"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = [
    "graphrag",
    "neo4j",
    "langchain",
    "requirements-management",
    "knowledge-graph",
    "rag",
    "fastapi",
    "railway",
]
authors = [{ name = "Arthur Fantaci" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.0.0",
    # Neo4j
    "neo4j>=5.15.0",
    "neo4j-graphrag>=1.0.0",
    # LangChain (minimal - core and OpenAI only)
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    # Data validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    # Observability (LangSmith)
    "langsmith>=0.7.0",
    # Guardrails - Phase 1 (Critical Security)
    "slowapi>=0.1.9",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    # Guardrails - Phase 2 (Content Safety)
    "better-profanity>=0.7.0",
    "asyncpg>=0.31.0",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg-binary>=3.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
    "pre-commit>=4.0.0",
    # LangSmith CLI for local debugging (not deployed to Vercel)
    "langsmith-fetch>=0.3.1",
]
guardrails = [
    # Phase 1 - Critical Security
    "slowapi>=0.1.9",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    # Phase 2 - Content Safety
    "better-profanity>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/arthurfantaci/requirements-graphrag-api"
Repository = "https://github.com/arthurfantaci/requirements-graphrag-api"

[project.scripts]
requirements-graphrag-api = "requirements_graphrag_api.api:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/requirements_graphrag_api"]

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "S",      # flake8-bandit (security)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]

ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "ANN401", # Dynamically typed expressions (Any)
    "S101",   # Use of assert (needed for tests)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "S105",    # Allow hardcoded test passwords
    "S311",    # Allow pseudo-random for test data generation
    "SIM117",  # Allow nested with statements in tests
    "ANN",     # Don't require annotations in tests
    "D",       # Don't require docstrings in tests
]
"scripts/create_*_dataset*.py" = [
    "E501",    # Allow long lines in dataset creation scripts (test data strings)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "-q"]

[tool.coverage.run]
source = ["src/requirements_graphrag_api"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 60

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.12",
    "mypy>=1.19.1",
    "radon>=6.0.1",
    "vulture>=2.14",
]
