[project]
name = "requirements-graphrag-api"
version = "0.1.0"
description = "GraphRAG REST API for Requirements Management Knowledge Graph"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = [
    "graphrag",
    "neo4j",
    "langchain",
    "requirements-management",
    "knowledge-graph",
    "rag",
    "fastapi",
    "railway",
]
authors = [{ name = "Arthur Fantaci" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web framework
    "fastapi>=0.130.0,<1.0.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=3.3.4",
    # Neo4j
    "neo4j>=5.15.0",
    "neo4j-graphrag>=1.13.0",
    # LangChain (minimal - core and OpenAI only)
    "langchain-core>=0.3.0",
    "langchain-openai>=1.1.12",
    # Data validation
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    # Observability (LangSmith)
    "langsmith>=0.7.0",
    # Guardrails - Phase 1 (Critical Security)
    "slowapi>=0.1.9",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    # Voyage AI (query-time embeddings — must match graphrag-api-db pipeline)
    "voyageai>=0.3.7",
    # Guardrails - Phase 2 (Content Safety)
    "better-profanity>=0.7.0",
    "asyncpg>=0.31.0",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg-binary>=3.3.3",
    "sentry-sdk[fastapi,langchain,langgraph]>=2.52.0",
    # Structured logging (Phase 3a)
    "structlog>=24.0.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.15.10",
    "ty>=0.0.8",
    "pre-commit>=4.0.0",
    # LangSmith CLI for local debugging (not deployed to Vercel)
    "langsmith-fetch>=0.3.1",
]
guardrails = [
    # Phase 1 - Critical Security
    "slowapi>=0.1.9",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    # Phase 2 - Content Safety
    "better-profanity>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/arthurfantaci/requirements-graphrag-api"
Repository = "https://github.com/arthurfantaci/requirements-graphrag-api"

[project.scripts]
requirements-graphrag-api = "requirements_graphrag_api.api:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/requirements_graphrag_api"]

# =============================================================================
# Ruff Configuration
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "S",      # flake8-bandit (security)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
    "TRY",    # tryceratops (exception handling)
    "EM",     # flake8-errmsg (exception messages)
    "PIE",    # flake8-pie (misc linting)
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PL",     # Pylint
]

ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "ANN401", # Dynamically typed expressions (Any)
    "S101",   # Use of assert (needed for tests)
    "TRY003", # Long exception messages — project uses msg = "..." pattern
    "TRY300", # try-consider-else — existing try/except patterns
    "TRY400", # error-instead-of-exception — intentional logger.error in except blocks
    "TRY401", # verbose-log-message — logger.error with exception context
    "EM101",  # String literal in exception — too noisy with current patterns
    "EM102",  # f-string in exception — same
    "RET504", # Unnecessary variable before return — style preference
    "PLR0913",# Too many function arguments — common in config-heavy code
    "PLR0911",# Too many return statements — complex branching in retrieval
    "PLR0912",# Too many branches — complex enrichment/routing logic
    "PLR0915",# Too many statements — long but cohesive functions
    "PLR2004",# Magic value in comparison — common in tests
    "PLC0415",# import-outside-top-level — intentional lazy imports in functions
    "PLW0603",# global-statement — used in cost tracker singleton pattern
    "PLR1714",# repeated-equality-comparison — existing guard patterns
    "ARG001", # unused-function-argument — interface-conforming signatures (evaluators, routes)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "S105",    # Allow hardcoded test passwords
    "S311",    # Allow pseudo-random for test data generation
    "SIM117",  # Allow nested with statements in tests
    "ANN",     # Don't require annotations in tests
    "D",       # Don't require docstrings in tests
    "PLR2004", # Magic values in test assertions
    "ARG",     # Unused fixture args common in pytest
    "PT",      # Pytest style preferences (flexible in tests)
]
"scripts/create_*_dataset*.py" = [
    "E501",    # Allow long lines in dataset creation scripts (test data strings)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-ra", "-q"]

[tool.coverage.run]
source = ["src/requirements_graphrag_api"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 60

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
invalid-argument-type = "warn"
no-matching-overload = "warn"
possibly-missing-attribute = "warn"
invalid-return-type = "warn"
invalid-context-manager = "warn"
unsupported-operator = "warn"
unresolved-import = "warn"
call-non-callable = "warn"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.12",
    "radon>=6.0.1",
    "vulture>=2.16",
]
